fixing the gaps between boxes

--- a/css/main.scss
+++ b/css/main.scss
@@ -19,7 +19,7 @@ body {
 }
 
 .card {
-  padding: 20px;
+  // padding: 20px;
   border-radius: 0.5rem;
 } 
 
@@ -49,7 +49,7 @@ body {
   flex-direction: column;
   flex-wrap: wrap;
   gap: 1.5rem;
-  margin: 4.44rem 1.5rem;
+  // margin: 4.44rem 1.5rem;
   background-color: hsl(210, 46%, 95%);
 }
 
@@ -73,7 +73,7 @@ body {
 }
 @media (min-width: 768px) {
   .flex-container {
-    margin: 4.385rem;
+    // margin: 4.385rem;
   }
   .card-1, .card-4 {
     flex: 2;
